[gd_scene load_steps=4 format=3 uid="uid://b3an8ahavu4fm"]

[ext_resource type="Script" path="res://inventory_slot.gd" id="1_yyfqk"]
[ext_resource type="Texture2D" uid="uid://c8b371x0ppc2h" path="res://457905861_995796022322525_1255581322795427183_n.png" id="2_5e2gc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_knlfw"]

[node name="Inventory_Slot" type="Control"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 3
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 110.0
offset_bottom = 110.0
script = ExtResource("1_yyfqk")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="InnerBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 5.0
offset_right = -4.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.611765, 0.603922, 0.584314, 1)

[node name="Item_Icon" type="Sprite2D" parent="InnerBorder"]
position = Vector2(47.5, 48)
scale = Vector2(2.28125, 2.5625)
texture = ExtResource("2_5e2gc")

[node name="Item_Quantity" type="Label" parent="InnerBorder"]
offset_left = 5.0
offset_top = -5.0
offset_right = 34.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 35
text = "1"

[node name="ItemButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_knlfw")

[node name="DetailPanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 159.0
offset_bottom = -35.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="ItemName" type="Label" parent="DetailPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 6.0
offset_right = 51.0
offset_bottom = 29.0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 1)
theme_override_font_sizes/font_size = 15
text = "NAME"

[node name="ItemType" type="Label" parent="DetailPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 5.0
offset_top = -11.5
offset_right = 45.0
offset_bottom = 11.5
grow_vertical = 2
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.784314)
theme_override_font_sizes/font_size = 15
text = "TYPE
"

[node name="ItemEffect" type="Label" parent="DetailPanel"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = -23.0
offset_right = 57.0
offset_bottom = -1.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.0745098, 0.0745098, 0.0745098, 0.588235)
theme_override_font_sizes/font_size = 15
text = "EFFECT"

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = -135.0
offset_right = 240.0
offset_bottom = -5.0
color = Color(0.596078, 0.933333, 0.8, 1)

[node name="UseButton" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -115.0
offset_top = 10.0
offset_right = 115.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "USE
"

[node name="Drop" type="Button" parent="UsagePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -115.0
offset_top = -60.0
offset_right = 115.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 20
text = "DROP
"

[connection signal="mouse_entered" from="ItemButton" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_exited" from="ItemButton" to="." method="_on_item_button_mouse_exited"]
[connection signal="pressed" from="ItemButton" to="." method="_on_item_button_pressed"]
[connection signal="pressed" from="UsagePanel/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="UsagePanel/Drop" to="." method="_on_drop_pressed"]
